添加了非线性动画和弹簧动画

--- a/AnimationSample/AnimationSample/Base.lproj/Main.storyboard
+++ b/AnimationSample/AnimationSample/Base.lproj/Main.storyboard
@@ -157,6 +157,26 @@
                                             <segue destination="9no-d3-ZkJ" kind="push" id="uqa-W7-Jsc"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="Oge-Uf-jl5" style="IBUITableViewCellStyleDefault" id="F21-6u-8uz">
+                                        <rect key="frame" x="0.0" y="372" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="F21-6u-8uz" id="6e8-1n-1Og">
+                                            <frame key="frameInset" width="342" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Spring" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Oge-Uf-jl5">
+                                                    <frame key="frameInset" minX="15" width="325" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="8kx-NE-oDv" kind="push" id="Q5L-VW-Zdf"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -342,6 +362,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zbE-Yp-7HW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3252" y="1651"/>
+        </scene>
+        <!--Spring-->
+        <scene sceneID="Xte-Gi-rqw">
+            <objects>
+                <viewController id="8kx-NE-oDv" customClass="SpringViewController" customModule="AnimationSample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AB7-ff-w6L"/>
+                        <viewControllerLayoutGuide type="bottom" id="ofc-lJ-4mP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LBF-Ek-Ad2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nte-SF-lhM">
+                                <frame key="frameInset" minX="16" minY="101" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6h7-e9-eDV">
+                                <frame key="frameInset" minX="16" minY="323" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yf5-4f-y4P">
+                                <frame key="frameInset" minX="16" minY="208" width="80" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.98431372549999996" green="0.28627450980000002" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Spring" id="yTR-Td-ltB"/>
+                    <connections>
+                        <outlet property="blueView" destination="nte-SF-lhM" id="xIC-Ss-Ifh"/>
+                        <outlet property="redView" destination="Yf5-4f-y4P" id="CSm-ae-ZFI"/>
+                        <outlet property="yellowView" destination="6h7-e9-eDV" id="HfG-U7-10x"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DAJ-a6-V4y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1124" y="1648"/>
         </scene>
         <!--Eassing-->
         <scene sceneID="5sY-RC-iax">
